로딩 화면 안넘어가는 문제 페이드아웃 시간 조절

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script src="js/share.js"></script>
     <script>
         $(window).load(function(){
-            $(".loading").fadeOut();
+            $(".loading").fadeOut(500);
         });
     </script>
 </body>
