페이드아웃 말고 전체 스크립트 시간 조절

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <script src="js/share.js"></script>
     <script>
         $(window).load(function(){
-            $(".loading").fadeOut(500);
-        });
+            $(".loading").fadeOut();
+        },500);
     </script>
 </body>
 
