--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <title>지구끝의 온실 인물테스트</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/load.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/qna.css">
     <link rel="stylesheet" href="css/result.css">
